# visualEyes

./: .gitignore  06-bigData-user_story  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
demo/: demo.ipynb  demo2.ipynb  dev_plot_fixations.ipynb  dev_plot_gaze.ipynb  example.ipynb  heatmap_demo.ipynb  inspect_fixations_df.ipynb
dev/: run_visualeyes.py
dev/components/: define_aoi.py  epoch_data.py  run_define_aoi.py
dev/tech_review/: babyDataeyelinkio_example.ipynb  baharDataeyelinkio_example.ipynb  mne_example.ipynb  new_mne_example.ipynb
docs/: components.md
docs/presentations/: 10112024_final_presentation.pptx  tech_review.pptx
docs/tech_review/: eyelinkio_example.ipynb
docs/user_stories/: 01-bq-user_story.md  02-mh-user_story.md  03-bs-user_story.md  04-lz-user_story  04-lz-user_story.md  05-bs-user_story.md  05-cogSci-user_student.rtf  07-bs_user_story.md  08-bs_user_story.md  09-bs_user_story.md  10-bs_user_story.md  11-bs_user_story.md  12-bs_user_story.md  13-bs_user_story.md  user_story_tracker.md
src/visualeyes/: define_aoi.py
src/visualeyes/tests/: test_define_aoi.py
src/vizeyes/tests/: test_define_aoi.py
tech_review/: baharDataeyelinkio_example.ipynb
tests/: Untitled.ipynb  test_define_aoi.py
visualeyes/: __init__.py
visualeyes/core/: __init__.py  _utility.py  plotting.py  processing.py  utility.py
visualeyes/tests/: test_define_aoi.py  test_epoch_data.py  test_percent_data_in_aoi.py  test_utility.py
(+1 files in other folders)
