[project]
name = "visualeyes"

dynamic = ["version"]
authors = [
  {name="McKenzie Hagen", email="mphagen@uw.edu"},
  {name="Bahar Sener", email="sbsener@uw.edu"}, 
    {name="Brenda (Siyue) Qiu", email="siyueq@uw.edu"}, 
  {name="Lydia Zhang", email="yzh22@uw.edu"}, 

]
description = "A package to create visualizations for eyetracking quality control"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"matplotlib==3.9.3",
    "numpy==2.1.3",
    "pandas==2.2.3", 
    "eyelinkio==0.2.0"
] 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["visualeyes*"]
namespaces = false

